--- a/src/modules/admin/SelectSizeType/selectsizetype.scss
+++ b/src/modules/admin/SelectSizeType/selectsizetype.scss
@@ -11,8 +11,6 @@
     padding: 10px 15px;
 }
 
-.error {
-    color: var(--color-red);
-    padding: 5px;
-    font-weight: 500;
+.wrapper {
+    padding-bottom: 2rem;
 }
