--- a/src/app/styles/main.global.scss
+++ b/src/app/styles/main.global.scss
@@ -69,10 +69,23 @@ img {
     user-select: none;
 }
 
+button {
+    display: inline-block;
+    outline: none;
+    border: none;
+    padding: 0;
+    font-family: $font-family-inter;
+    font-size: $fontsize;
+    color: var(--color-gray11);
+    background: transparent;
+    cursor: pointer;
+}
+
 
 .breadcrumbsItem {
     opacity: 0.6;
 }
+
 
 
 
